@@ -1,3 +1,7 @@
+2008-04-30  Michal Ludvig  <michal@logix.cz>
+
+	* s3db, S3/SimpleDB.py: Implemented almost full SimpleDB API.
+
 2008-04-29  Michal Ludvig  <michal@logix.cz>
 
 	* s3db, S3/SimpleDB.py: Initial support for Amazon SimpleDB. 
